# quizzer

./: .gitignore  README.md
backend/: .env  README.md  pyproject.toml
backend/app/: init_db.py  main.py
backend/app/api/: deps.py  main.py  mark.py
backend/app/api/ensure/: math.py
backend/app/api/routes/: admin.py  course.py  login.py  mark.py  picture.py  question.py  quiz.py  quizzer.py  student.py  teacher.py  test.py  user.py
backend/app/core/: config.py  create_tablees.py  create_tables.py  db.py  initial_data.py  security.py
backend/app/crud/: course_crud.py  ensure.py  question_crud.py  quiz.py  quiz_crud.py  quizzer_crud.py  student_crud.py  teacher_crud.py  user.py  user_crud.py
backend/app/models/: game.py  models.py  note.py  quiz.py  quizzer.py  user.py  users.py
backend/app/schemas/: common.py  course.py  enums.py  progress.py  question.py  question_attempt.py  question_submission.py  quiz.py  request_model.py  response_models.py  user.py  util.py
frontend/: .prettierignore  .prettierrc  index.html  package.json  pnpm-lock.yaml
frontend/src/: main.tsx  routeTree.gen.ts  theme.ts
frontend/src/core/: request.ts  schemas.ts  services.ts
frontend/src/core/schemas/: common.ts  question_create.ts  question_submission.ts
frontend/src/core/services/: admin.ts  student.ts  teacher.ts  user.ts
frontend/src/core/types/: common.ts  question.ts
frontend/src/hooks/: admin.ts  student.ts  teacher.ts  useAuth.ts  useCustomToast.ts
frontend/src/routes/: __root.tsx  _layout.tsx  about.tsx
frontend/src/routes/(auth)/: login.tsx  signup.tsx
frontend/src/routes/_layout/: index.tsx  profile.tsx
frontend/src/ui/: About.tsx
frontend/src/ui/Admin/: AddUser.tsx
(+111 files in other folders)
