[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.9",
    "psycopg>=3.2.3",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.35",
]
